# bitnet2lut

./: .gitignore  README.md  entropy_report.json  environment.yml  measure_entropy.py  pyproject.toml  setup.sh
configs/: default.yaml
rtl/: README.md
rtl/constraints/: timing.xdc
rtl/scripts/: run_all.tcl  run_sim_only.tcl  run_synth_only.tcl  sim_G3.tcl  sim_G4.tcl  synth_G3.tcl  synth_G4.tcl  synth_INT4_exception.tcl  synth_INT8_baseline.tcl
rtl/src/: exception_comparator.sv  tlmm_engine.sv  tlmm_top.sv  weight_index_bram.sv
rtl/tb/: tb_tlmm_engine.sv
scripts/: compare_activation_bits.py  compare_exception.py  compare_lloydmax.py  compute_lloydmax.py  measure_activations.py  run_pipeline.sh  run_tests.py
src/bitnet2lut/: __init__.py  cli.py  emulator.py  export_fpga.py  extract.py  inference.py  lut_gen.py  model_config.py  report.py  tile.py  utils.py  verify.py  verify_model.py
tests/: test_emulator.py  test_export_fpga.py  test_extract.py  test_lut_gen.py  test_tile.py  test_verify.py
